@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Logic {
class EditCommand LOGIC_COLOR
class CommandResult LOGIC_COLOR
}


package "Model" <<rectangle>> {
class EditPersonDescriptor
class Group
class Person
class Address
class Email
class Name
class Phone
class Tag
class "<<interface>>\nModel" as model
class ModelManager
class UniquePersonList
class UniqueGroupList
class AddressBook
class "<<interface>>\nReadOnlyAddressBook" as ReadOnlyAddressBook
}

EditCommand -right[LOGIC_COLOR]-> "1" EditPersonDescriptor
EditCommand -[LOGIC_COLOR]-> "1" Index
EditCommand .[LOGIC_COLOR].> model
EditCommand .right[LOGIC_COLOR].> "1" Person
EditCommand .[LOGIC_COLOR].> EditPersonDescriptor
EditCommand .[LOGIC_COLOR].> "0..1" CommandResult : creates >

ModelManager ..right|> model
ModelManager --> "1" AddressBook

AddressBook *-down-> "1" UniqueGroupList
AddressBook *-down-> "1" UniquePersonList
AddressBook .right|> ReadOnlyAddressBook

UniquePersonList -down-> "*" Person
UniqueGroupList -down-> "*" Group

Person --> "1" Address
Person --> "1" Phone
Person --> "1" Email
Person --> "1" Name
Person --> "*" Tag
Person --> "*" Group

EditPersonDescriptor -up-> "0..1" Address
EditPersonDescriptor -up-> "0..1" Phone
EditPersonDescriptor -up-> "0..1" Email
EditPersonDescriptor -up-> "0..1" Name
EditPersonDescriptor -up-> "*" Tag
EditPersonDescriptor -up-> "*" Group

@enduml
